--- a/etc/kolla/passwords.yml
+++ b/etc/kolla/passwords.yml
@@ -64,6 +64,9 @@ mistral_keystone_password: "password"
 
 horizon_secret_key: "password"
 
+manila_database_password: "password"
+manila_keystone_password: "password"
+
 ####################
 # RabbitMQ options
 ####################
